--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -9,8 +9,12 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link type="text/css" rel="stylesheet" href="css/boostrap-theme.css">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
+        <link tyype="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
-    <body>
+    <body id="projects">
         <p>This is my new projects page.Please give me some code!
     </body>
 </html>
+  
