I make 2 new links to my technology page and I hit the green arrow from netbeans  to see what happens.

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -17,4 +17,6 @@ and open the template in the editor.
         <p>This is my new projects page.Please give me some code!
     </body>
 </html>
-  
+<p> on my projects page I have my old project and my new one. 
+     
+   
